--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build-css": "tailwindcss build -i src/input.css -o public/output.css --watch",
+    "build-css": "tailwindcss build -i src/input.css -o public/output.css",
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build-css && vite build",
     "preview": "vite preview"
   },
   "author": "Clarence Velasco",
